--- a/src/app/pages/staff-management/add-staff/add-staff.component.html
+++ b/src/app/pages/staff-management/add-staff/add-staff.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <!-- Main Wrapper -->
   <div class="main-container">
-    <div class="content-inside m-3" *ngIf="formState == 'user'">
+    <div class="content-inside m-4 bg-white p-4" *ngIf="formState == 'user'">
                    <div class="page-title"> {{editable ? 'Edit' : 'Add'}} Staff</div>
                         <form [formGroup]="addStaffForm">
                       <div class="row g-3">
@@ -67,13 +67,13 @@
                                     </div>
                                 </div>
 
-                                <div class="text-center mt-4">
-                                    <button class="btn btn-yellow" (click)="addStaff()">
+                                <div class="mt-4">
+                                    <button class="btn btn-primary" (click)="addStaff()">
                                         {{editable ? 'Update' : 'Submit'}}
                                     </button>
                                      <div class="mt-5 text-center"
                                            *ngIf="editable" >
-                                            <button class="btn btn-yellow" (click)="onOpen()" type="button">Modify
+                                            <button class="btn btn-primary" (click)="onOpen()" type="button">Modify
                                                 Permission
                                             </button>
                                         </div>
