--- a/src/app/pages/staff-management/role-management/role-create/role-create.component.html
+++ b/src/app/pages/staff-management/role-management/role-create/role-create.component.html
@@ -21,10 +21,10 @@
 <div class="wrapper">
     <!-- Main Wrapper -->
     <div class="main-container">
-        <div class="content-inside m-3">
+        <div class="content-inside m-4">
             <div class="row">
             <div class="col-12">
-                <div class="permission-box p-3">
+                <div class="permission-box">
                     <form>
                         <div class="form-group mb-4">
                             <label>Name</label>
