--- a/src/app/pages/staff-management/staff-list/staff-list.component.html
+++ b/src/app/pages/staff-management/staff-list/staff-list.component.html
@@ -51,15 +51,17 @@
 <div class="wrapper">
     <!-- Main Wrapper -->
     <div class="main-container">
-        <div class="d-flex justify-content-between my-3">
-            <h5 class="mt-3 text-primary">Staff List</h5>
+        <div class="content-inside m-4 bg-white p-4">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <h5 class="text-primary">Staff List</h5>
             <button class="btn btn-primary" [routerLink]="'/staff/add-staff'"> Add Staff</button>
         </div>
-        <!-- <div class="content-inside m-3">
+        <!-- <div class="content-inside m-4">
             <dynamic-table [apiUrl]="'http://172.16.10.156/ExCode_Backend/api/console/usermanagement/staff/list'" [pageSize]="10"
             [httpHeaders]="httpHeaders" (action)="onTableAction($event)">
             </dynamic-table>
 
         </div> -->
+    </div>
     </div>
 </div>
