--- a/src/app/pages/staff-management/role-management/role-create/role-create.component.html
+++ b/src/app/pages/staff-management/role-management/role-create/role-create.component.html
@@ -50,7 +50,7 @@
             <!--    <br><br>-->
 
 
-            <app-permission-list [canSet]="true"
+            <app-permission-list [type]="'role'" [canSet]="true"
                 (emitter)="permissions = $event"></app-permission-list>
             <button class="btn btn-yellow ms-4" (click)="onSubmit()">Submit</button>
 
