--- a/src/app/pages/staff-management/staff-list/staff-list.component.html
+++ b/src/app/pages/staff-management/staff-list/staff-list.component.html
@@ -56,12 +56,12 @@
             <h5 class="text-primary">Staff List</h5>
             <button class="btn btn-primary" [routerLink]="'/staff/add-staff'"> Add Staff</button>
         </div>
-        <!-- <div class="content-inside m-4">
+        <div class="content-inside m-4">
             <dynamic-table [apiUrl]="'http://172.16.10.156/ExCode_Backend/api/console/usermanagement/staff/list'" [pageSize]="10"
             [httpHeaders]="httpHeaders" (action)="onTableAction($event)">
             </dynamic-table>
 
-        </div> -->
+        </div>
     </div>
     </div>
 </div>
