Worked on add staff management module

--- a/src/app/pages/dashboard/add-escrow/deposit-physical/deposit-physical.component.html
+++ b/src/app/pages/dashboard/add-escrow/deposit-physical/deposit-physical.component.html
@@ -86,7 +86,16 @@
                         [requiredMesg]="field.label + ' is Required'">
                     </app-show-errors>
                 </div>
+                  <div *ngIf="depositForm.get(field.controlName)?.value">
+                <p class="mb-1 mt-1">
+                    <a [href]="depositForm.get(field.controlName)?.value" target="_blank" class="text-decoration-none">
+                        <img src="assets/img/view.png" class="pe-2" />
+                        View Uploaded Image
+                    </a>
+                </p>
             </div>
+            </div>
+          
         </ng-container>
 
         <div class="col-md-12">
