--- a/src/app/pages/staff-management/add-staff/add-staff.component.html
+++ b/src/app/pages/staff-management/add-staff/add-staff.component.html
@@ -1,32 +1,34 @@
-<div class="wrapper">
-    <div class="main-container">
-        <div class="content-inside m-4 bg-white p-4" *ngIf="formState == 'user'">
-            <div class="page-title"> {{editable ? 'Edit' : 'Add'}} Staff</div>
-            <form [formGroup]="addStaffForm">
-                <div class="row g-3">
-                    <div class="col-3">
-                        <div class="form-group">
-                            <label>Role*</label>
-                            <select [disabled]="editable" class="form-select" formControlName="role">
-                                <option selected value="" disabled>Please Select Role</option>
-                                <option [value]="item.name" *ngFor="let item of roleList?.data">
-                                    {{item.name}}
-                                </option>
-                            </select>
-                            <app-show-errors [ctrl]="addStaffForm.get('role')" [requiredMesg]="'Role is Required'">
-                            </app-show-errors>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="form-group">
-                            <label>Name*</label>
-                            <input type="text" class="form-control" placeholder="Enter name" formControlName="name" />
-                            <app-show-errors [ctrl]="addStaffForm.get('name')" [requiredMesg]="'Name is Required'">
-                            </app-show-errors>
-                        </div>
-                    </div>
-                    <!-- <div class="col-3">
-                        <div class="form-group">
+<div class="modal-header text-center">
+    <h2 class="modal-title w-100 text-center">{{editable ? 'Edit' : 'Add'}} Staff</h2>
+    <button type="button" class="btn-close" (click)="activeModal.dismiss()"></button>
+</div>
+
+<div class="modal-body p-4">
+    <form *ngIf="formState == 'user'" [formGroup]="addStaffForm" class="p-2">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label>Role*</label>
+                    <select [disabled]="editable" class="form-select" formControlName="role">
+                        <option selected value="" disabled>Please Select Role</option>
+                        <option [value]="item.name" *ngFor="let item of roleList?.data">
+                            {{item.name}}
+                        </option>
+                    </select>
+                    <app-show-errors [ctrl]="addStaffForm.get('role')" [requiredMesg]="'Role is Required'">
+                    </app-show-errors>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label>Name*</label>
+                    <input type="text" class="form-control" placeholder="Enter name" formControlName="name" />
+                    <app-show-errors [ctrl]="addStaffForm.get('name')" [requiredMesg]="'Name is Required'">
+                    </app-show-errors>
+                </div>
+            </div>
+            <!--        <div class="col-md-6">
+                <div class="form-group">
                             <label>Username*</label>
                             <input type="text" class="form-control" placeholder="Enter username"
                                 formControlName="username" />
@@ -36,59 +38,64 @@
                         </div>
                     </div> -->
 
-                    <div class="col-3">
-                        <div class="form-group">
-                            <label>Email*</label>
-                            <input class="form-control" type="text" placeholder="Enter email" formControlName="email" />
-                            <app-show-errors [ctrl]="addStaffForm.get('email')" [requiredMesg]="'Email is Required'">
-                            </app-show-errors>
-                        </div>
+             <div class="col-md-12">
+                <div class="form-group">
+                    <label>Email*</label>
+                    <input class="form-control" type="text" placeholder="Enter email" formControlName="email" />
+                    <app-show-errors [ctrl]="addStaffForm.get('email')" [requiredMesg]="'Email is Required'">
+                    </app-show-errors>
+                </div>
+            </div>
+           <div class="col-md-12">
+                <div class="form-group">
+                    <label>Phone*</label>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text me-0" id="basic-addon1">+91</span>
+                        <input class="form-control" [appInputRestriction]="'integer'" maxlength="10" type="text"
+                            placeholder="Enter phone" formControlName="phone" />
                     </div>
-                    <div class="col-3">
-                        <div class="form-group">
-                            <label>Phone*</label>
-                            <input class="form-control" [appInputRestriction]="'integer'" maxlength="10" type="text"
-                                placeholder="Enter phone" formControlName="phone" />
-                            <app-show-errors [ctrl]="addStaffForm.get('phone')" [requiredMesg]="'Phone is Required'">
-                            </app-show-errors>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="form-group">
-                            <label class="form-label d-block mb-2">Rights:</label>
-                            <div class="form-check form-check-inline">
-                                <input type="radio" class="form-check-input" formControlName="rights" [value]="'edit'"
-                                    id="rights-edit">
-                                <label class="form-check-label" for="rights-edit">Edit</label>
-                            </div>
-
-                            <div class="form-check form-check-inline">
-                                <input type="radio" class="form-check-input" formControlName="rights"
-                                    [value]="'readonly'" id="rights-readonly">
-                                <label class="form-check-label" for="rights-readonly">Read Only</label>
-                            </div>
-                               <app-show-errors [ctrl]="addStaffForm.get('rights')" [requiredMesg]="'Rights is Required'">
-                            </app-show-errors>
-                        </div>
+                    <app-show-errors [ctrl]="addStaffForm.get('phone')" [requiredMesg]="'Phone is Required'">
+                    </app-show-errors>
+                </div>
+            </div>
+         <div class="col-md-12">
+                <div class="form-group">
+                    <label class="form-label d-block mb-2">Rights:</label>
+                    <div class="form-check form-check-inline">
+                        <input type="radio" class="form-check-input" formControlName="rights" [value]="'edit'"
+                            id="rights-edit">
+                        <label class="form-check-label" for="rights-edit">Edit</label>
                     </div>
 
+                    <div class="form-check form-check-inline">
+                        <input type="radio" class="form-check-input" formControlName="rights" [value]="'readonly'"
+                            id="rights-readonly">
+                        <label class="form-check-label" for="rights-readonly">Read Only</label>
+                    </div>
+                    <app-show-errors [ctrl]="addStaffForm.get('rights')" [requiredMesg]="'Rights is Required'">
+                    </app-show-errors>
+                </div>
+            </div>
 
-                    <div class="mt-4">
+
+            <!-- <div class="mt-4">
                         <button class="btn btn-primary" (click)="addStaff()">
                             {{editable ? 'Update' : 'Submit'}}
-                        </button>
-                        <!-- <div class="mt-5 text-center" *ngIf="editable">
+                        </button> -->
+            <!-- <div class="mt-5 text-center" *ngIf="editable">
                             <button class="btn btn-primary" (click)="onOpen()" type="button">Modify
                                 Permission
                             </button>
                         </div> -->
-                    </div>
-
-                </div>
-            </form>
         </div>
-    </div>
-    <!-- <div *ngIf="formState == 'permissions'" style="background: white">
+    </form>
+</div>
+<div class="modal-footer justify-content-center">
+    <button class="btn btn-white " (click)="activeModal.dismiss()">Cancel</button>
+    <button class="btn btn-primary" (click)="addStaff()">{{editable ? 'Update' : 'Submit'}}</button>
+</div>
+
+<!-- <div *ngIf="formState == 'permissions'" style="background: white">
     <app-permission-list  [canSet]="true" (emitter)="permissions = $event"></app-permission-list>
     <button type="submit" name="submit" (click)="onSubmit()" class="btn login-btn w-auto">Submit</button>
 </div> -->
