--- a/src/app/pages/staff-management/staff-list/staff-list.component.html
+++ b/src/app/pages/staff-management/staff-list/staff-list.component.html
@@ -54,7 +54,7 @@
         <div class="content-inside m-4 bg-white p-4">
         <div class="d-flex justify-content-between align-items-center mb-3">
             <h5 class="text-primary">Staff List</h5>
-            <button class="btn btn-primary" [routerLink]="'/staff/add-staff'"> Add Staff</button>
+            <button class="btn btn-primary" (click)="openModal()"> Add Staff</button>
         </div>
         <div class="content-inside m-4">
             <dynamic-table [apiUrl]="'http://172.16.10.166/ExCode_Backend/api/console/usermanagement/staff/list'" [pageSize]="10"
