Worked on staff list module

--- a/src/app/pages/staff-management/add-staff/add-staff.component.html
+++ b/src/app/pages/staff-management/add-staff/add-staff.component.html
@@ -27,7 +27,7 @@
                     </app-show-errors>
                 </div>
             </div>
-            <!--        <div class="col-md-6">
+                   <div class="col-md-12">
                 <div class="form-group">
                             <label>Username*</label>
                             <input type="text" class="form-control" placeholder="Enter username"
@@ -36,7 +36,7 @@
                                 [requiredMesg]="'Username is Required'">
                             </app-show-errors>
                         </div>
-                    </div> -->
+                    </div>
 
              <div class="col-md-12">
                 <div class="form-group">
