--- a/src/app/pages/sidebar/sidebar.component.html
+++ b/src/app/pages/sidebar/sidebar.component.html
@@ -45,7 +45,7 @@
               <a class="nav-link ps-0" (click)="ResetSubMenu(item)" [routerLink]="[item.routePath]"
                 [routerLinkActive]="'active'" href="javascript:void(0);"
                 (isActiveChange)="$event ?_title = item.value:null">
-                <span class="pe-3"><img [src]="item?.icon"></span>{{item.value}}
+                <span class="px-3"><img [src]="item?.icon"></span>{{item.value}}
               </a>
             </li>
 
