--- a/src/app/pages/staff-management/add-staff/add-staff.component.html
+++ b/src/app/pages/staff-management/add-staff/add-staff.component.html
@@ -6,7 +6,7 @@
 <div class="modal-body p-4">
     <form *ngIf="formState == 'user'" [formGroup]="addStaffForm" class="p-2">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-12 col-lg-6">
                 <div class="form-group">
                     <label>Role*</label>
                     <select [disabled]="editable" class="form-select" formControlName="role">
@@ -19,7 +19,7 @@
                     </app-show-errors>
                 </div>
             </div>
-            <div class="col-md-12">
+           <div class="col-12 col-lg-6">
                 <div class="form-group">
                     <label>Name*</label>
                     <input type="text" class="form-control" placeholder="Enter name" formControlName="name" />
@@ -27,7 +27,7 @@
                     </app-show-errors>
                 </div>
             </div>
-                   <div class="col-md-12">
+                    <div class="col-12 col-lg-6">
                 <div class="form-group">
                             <label>Username*</label>
                             <input type="text" class="form-control" placeholder="Enter username"
@@ -38,7 +38,7 @@
                         </div>
                     </div>
 
-             <div class="col-md-12">
+             <div class="col-12 col-lg-6">
                 <div class="form-group">
                     <label>Email*</label>
                     <input class="form-control" type="text" placeholder="Enter email" formControlName="email" />
@@ -46,7 +46,8 @@
                     </app-show-errors>
                 </div>
             </div>
-           <div class="col-md-12">
+          <div class="col-12 col-lg-6">
+
                 <div class="form-group">
                     <label>Phone*</label>
                     <div class="input-group mb-3">
@@ -58,7 +59,7 @@
                     </app-show-errors>
                 </div>
             </div>
-         <div class="col-md-12">
+        <div class="col-12 col-lg-6">
                 <div class="form-group">
                     <label class="form-label d-block mb-2">Rights:</label>
                     <div class="form-check form-check-inline">
