--- a/src/app/pages/dashboard/add-escrow/deposit-physical/deposit-physical.component.html
+++ b/src/app/pages/dashboard/add-escrow/deposit-physical/deposit-physical.component.html
@@ -90,7 +90,7 @@
                 <p class="mb-1 mt-1">
                     <a [href]="depositForm.get(field.controlName)?.value" target="_blank" class="text-decoration-none">
                         <img src="assets/img/view.png" class="pe-2" />
-                        View Uploaded Image
+                        <!-- View Uploaded Image -->
                     </a>
                 </p>
             </div>
