--- a/src/app/pages/staff-management/staff-list/staff-list.component.html
+++ b/src/app/pages/staff-management/staff-list/staff-list.component.html
@@ -1,67 +1,4 @@
-<!-- <div class="layout-px-spacing">
-    <div class="row layout-top-spacing">
-        <div class="col-12 layout-spacing">
-            <div class="page-title">
-                Staff
-            </div>
-        </div>
-        <div class="col-12">
-            <div class="single-transfer">
-                <div class="w-100 d-flex flex-wrap">
-                    <div class="d-flex gap flex-wrap">
-                        <div class="filter-main my-2">
-                            <div class="d-flex align-items-center">
-                                <app-dynamic-search *ngIf="searchArray" [filters]="searchArray"
-                                    (searchEvent)="OnSearch($event)"></app-dynamic-search>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="main-box">
-                    <div class="d-flex align-items-center justify-content-between">
-                        <h3>Staff List</h3>
-                        <button *ngIf="permissionService.hasPermission('corporate-users-create')" class="btn btn-yellow" [routerLink]="'/staff/add-staff'">
-                            Add Staff
-                        </button>
-                    </div>
-
-                    <div class="border-down my-3"></div>
-
-                    <div class="super-table p-0">
-                        <div class="customTbl" *ngIf="staffList$ | async as staffList">
-                            <app-dynamic-table-header [tableOptions]="staffList"></app-dynamic-table-header>
-                            <div class="customTblBox">
-                                <app-dynamic-table [data]="staffList$!"></app-dynamic-table>
-                            </div>
-                            <app-dynamic-table-pagination class="" *ngIf="staffList?.list?.length !== 0"
-                                [dynamicTableOptions]="dynamicTableOptions"></app-dynamic-table-pagination>
-                        </div>
-
-                    </div>
-
-
-                </div>
-
-
-            </div>
-        </div>
-    </div>
-</div> -->
-<div class="wrapper">
-    <!-- Main Wrapper -->
-    <div class="main-container">
-        <div class="content-inside m-4 bg-white p-4">
-        <div class="d-flex justify-content-between align-items-center mb-3">
-            <h5 class="text-primary">Staff List</h5>
-            <button class="btn btn-primary" (click)="openModal()"> Add Staff</button>
-        </div>
-        <div class="content-inside m-4">
-            <dynamic-table [apiUrl]="'http://172.16.10.166/ExCode_Backend/api/console/usermanagement/staff/list'" [pageSize]="10"
-            [httpHeaders]="httpHeaders" (action)="onTableAction($event)">
-            </dynamic-table>
-
-        </div>
-    </div>
-    </div>
-</div>
+<button class="btn btn-primary" (click)="openModal()"> Add Staff</button>
+<dynamic-table [apiUrl]="environment.baseUrl + 'usermanagement/staff/list'" [pageSize]="10" [httpHeaders]="httpHeaders"
+    (action)="onTableAction($event)">
+</dynamic-table>
