--- a/src/app/pages/dashboard/add-escrow/release-condition/release-condition.component.html
+++ b/src/app/pages/dashboard/add-escrow/release-condition/release-condition.component.html
@@ -17,42 +17,42 @@
             <app-show-errors [ctrl]="releaseForm.get('document')" [requiredMesg]="'Document is required'">
             </app-show-errors>
             <div class="view-img">
-                
-        <p class="mb-1" *ngIf="releaseForm.get('document')?.value">
-            <a [href]="releaseForm.get('document')?.value" target="_blank" class="text-decoration-none">
-                <img src="assets/img/view.png" class="me-2"> 
-            </a>
-            <button type="button" class="btn border-0" (click)="removeUploadedDocument()">
-                <img src="assets/img/delete.png"> 
-            </button>
-        </p>
+
+                <p class="mb-1" *ngIf="releaseForm.get('document')?.value">
+                    <a [href]="releaseForm.get('document')?.value" target="_blank" class="text-decoration-none">
+                        <img src="assets/img/view.png" class="me-2">
+                    </a>
+                    <button type="button" class="btn border-0" (click)="removeUploadedDocument()">
+                        <img src="assets/img/delete.png">
+                    </button>
+                </p>
             </div>
         </div>
 
     </div>
 
 
-        <div class="col-12 col-lg-6" *ngFor="let opt of allOptions">
-            <div class="p-3 border rounded position-relative mb-3" [ngClass]="{'border-primary': isSelected(opt.key)}"
-                style="cursor: pointer;" (click)="toggleOption(opt.key)">
-                <div class="d-flex gap-3 flex-column align-items-start">
-                    <img [src]="opt.icon">
-                    <div>
-                        <h5 class="mb-1">{{ opt.label }}</h5>
-                        <p class="text-muted small mb-0">{{ opt.description }}</p>
-                    </div>
+    <div class="col-12 col-lg-6" *ngFor="let opt of allOptions">
+        <div class="p-3 border rounded position-relative mb-3" [ngClass]="{'border-primary': isSelected(opt.key)}"
+            style="cursor: pointer;" (click)="toggleOption(opt.key)">
+            <div class="d-flex gap-3 flex-column align-items-start">
+                <img [src]="opt.icon">
+                <div>
+                    <h5 class="mb-1">{{ opt.label }}</h5>
+                    <p class="text-muted small mb-0">{{ opt.description }}</p>
                 </div>
-                <input type="checkbox" class="form-check-input position-absolute top-0 end-0 m-3"
-                    [checked]="isSelected(opt.key)" readonly />
-                <button *ngIf="opt.isCustom" type="button"
-                    class="btn btn-outline-danger position-absolute bottom-0 end-0 m-2 px-3"
-                    (click)="removeCustom(opt.key)"><i class="fas fa-trash-alt"></i></button>
             </div>
+            <input type="checkbox" class="form-check-input position-absolute top-0 end-0 m-3"
+                [checked]="isSelected(opt.key)" readonly />
+            <button *ngIf="opt.isCustom" type="button"
+                class="btn btn-outline-danger position-absolute bottom-0 end-0 m-2 px-3"
+                (click)="removeCustom(opt.key)"><i class="fas fa-trash-alt"></i></button>
         </div>
-        <app-show-errors [ctrl]="releaseForm.get('release_conditions')"
-            [requiredMesg]="'At least one condition is required'">
-        </app-show-errors>
-    
+    </div>
+    <app-show-errors [ctrl]="releaseForm.get('release_conditions')"
+        [requiredMesg]="'At least one condition is required'">
+    </app-show-errors>
+
     <div class="mt-3">
         <button class="btn btn-white" type="button" (click)="openCustomModal(customConditionModal)">Add New
             Custom
@@ -85,4 +85,33 @@
                 (click)="modal.dismiss()">Cancel</button>
         </div>
     </form>
+</ng-template>
+<ng-template #finalConfirmation let-modal>
+    <div class="modal-body p-4 text-center">
+        <div class="mb-3">
+            <div class="d-flex justify-content-center align-items-center mb-3" style="font-size: 2rem;">
+                <i class="bi bi-patch-check-fill text-primary"></i>
+            </div>
+            <h5 class="fw-bold">Final Confirmation Required</h5>
+            <div class="mt-3 text-start">
+                <div class="form-check mb-2">
+                    <input class="form-check-input" type="checkbox" id="confirmCheck" [(ngModel)]="isConfirmed" />
+                    <label class="form-check-label" for="confirmCheck">
+                        Before proceeding, please ensure the following:
+                        <ul class="mb-0">
+                            <li>All client details, agreements, deposit & release conditions are accurate and as per
+                                agreement.</li>
+                            <li>Once confirmed, login details will be sent to client. No further changes can be made.
+                            </li>
+                        </ul>
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center gap-2 mt-4">
+            <button class="btn btn-outline-secondary" (click)="modal.dismiss()">Review Again</button>
+            <button class="btn btn-primary" [disabled]="!isConfirmed" (click)="confirmAndSend(modal)">Confirm &
+                Send</button>
+        </div>
+    </div>
 </ng-template>
