--- a/src/app/pages/staff-management/role-management/role-list/role-list.component.html
+++ b/src/app/pages/staff-management/role-management/role-list/role-list.component.html
@@ -1,65 +1,4 @@
-<!-- <div class="layout-px-spacing">
-  <div class="row layout-top-spacing">
-    <div class="col-12">
-      <div class="page-title">
-        Roles
-      </div>
-    </div>
-    <div class="col-12">
-      <div class="single-transfer">
-            <div class="w-100 d-flex flex-wrap my-4">
-              <div class="d-flex gap flex-wrap">
-                <div class="filter-main my-2">
-                  <div class="d-flex align-items-center">
-                    <app-dynamic-search *ngIf="searchArray" [filters]="searchArray"
-                      (searchEvent)="OnSearch($event)"></app-dynamic-search>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-              <div class="main-box">
-                <div class="d-flex align-items-center justify-content-between">
-                  <h3>Roles List</h3>
-                    <button *ngIf="permissionService.hasPermission('roles-create')" class="btn btn-yellow" [routerLink]="this.userType == 'admin' ? '/roles/add' : '/staff/add'">
-                      Add Role
-                    </button>
-                </div>
-       <div class="border-down my-3"></div>
-                  <div class="super-table pt-4">
-                    <div class="customTbl" *ngIf="serviceRequestList$ | async as serviceRequestList">
-                      <app-dynamic-table-header [tableOptions]="serviceRequestList"></app-dynamic-table-header>
-                      <div class="customTblBox">
-                        <app-dynamic-table [data]="serviceRequestList$!"></app-dynamic-table>
-                      </div>
-                      <app-dynamic-table-pagination class="" *ngIf="serviceRequestList?.list?.length !== 0"
-                        [dynamicTableOptions]="dynamicTableOptions"></app-dynamic-table-pagination>
-                    </div>
-
-                  </div>
-
-                
-              </div>
-            
-     
-      </div>
-    </div>
-  </div>
-</div> -->
-<div class="wrapper">
-  <!-- Main Wrapper -->
-  <div class="main-container">
-    <div class="content-inside m-4 bg-white p-4">
-      <div class="d-flex justify-content-between align-items-center mb-3">
-        <h5 class="text-primary">Role List</h5>
-        <button class="btn btn-primary" [routerLink]="'/staff/add'"> Add Role</button>
-      </div>
-
-        <dynamic-table [apiUrl]="'http://172.16.10.166/ExCode_Backend/api/console/roles/list'" [pageSize]="10"
-          [showHeader]="false" [httpHeaders]="httpHeaders" [customParams]="customParams"
-          (action)="onTableAction($event)">
-        </dynamic-table>
-    
-    </div>
-  </div>
-</div>
+<button class="btn btn-primary" [routerLink]="'/staff/add'"> Add Role</button>
+<dynamic-table [apiUrl]="environment.baseUrl + 'roles/list'" [pageSize]="10" [showHeader]="false"
+  [httpHeaders]="httpHeaders" [customParams]="customParams" (action)="onTableAction($event)">
+</dynamic-table>
