--- a/src/app/pages/top-bar/top-bar.component.html
+++ b/src/app/pages/top-bar/top-bar.component.html
@@ -1,7 +1,7 @@
 <div class="topbar">
   <div class="container-fluid">
     <div class="d-flex justify-content-between align-items-center">
-      <h5 class="text-primary m-0">{{_titleName}}</h5>
+      <h5 class="text-primary m-0">Welcome {{this._AuthCoreService.user()?.name}}</h5>
       <ul class="navbar-item d-flex align-items-center mb-0 gap-3">
         <li>
           <div class="position-relative"><i class="fa-regular fa-bell"></i><span class="badge-notification">0</span>
@@ -30,4 +30,11 @@
 
   </div>
 </div>
-<router-outlet></router-outlet>
+<div class="wrapper">
+  <div class="main-container">
+    <div class="content-inside m-4">
+      <h3 class="text-primary pb-3">{{_titleName}}</h3>
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
